# video_capture

./: CMakeLists.txt  videoCapture.cpp  videoReader.cpp
